tester/testsuite/bad/bad031.jl
int main() { 
    if(true);
    else return 0;
}
